--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,10 @@
     "build:ios": "cd ios && xcodebuild -workspace MeshGradientExample.xcworkspace -scheme MeshGradientExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
+    "expo": "^51.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-image-colors": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
