--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
       "prettier"
     ],
     "rules": {
+      "react/react-in-jsx-scope": "off",
       "prettier/prettier": [
         "error",
         {
