--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,8 @@
     "expo": "^51.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-image-colors": "^2.4.0"
+    "react-native-image-colors": "^2.4.0",
+    "react-native-system-navigation-bar": "^2.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
