--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-mesh-gradient",
+  "name": "@kuss/react-native-mesh-gradient",
   "version": "0.1.0",
   "description": "MeshGradient for React Naitve.",
   "main": "lib/commonjs/index",
@@ -50,7 +50,8 @@
   },
   "homepage": "https://github.com/KusStar/react-native-mesh-gradient#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
