--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,13 @@
-nodeLinker: node-modules
 nmHoistingLimits: workspaces
+
+nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-after-install.cjs
+    spec: "https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.6.0/bundles/@yarnpkg/plugin-after-install.js"
 
 yarnPath: .yarn/releases/yarn-3.6.1.cjs
