--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
